WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93120
[WK2] REGRESSION(124596) lot of web process unresponsiveness appears on Apple bots
https://bugs.webkit.org/show_bug.cgi?id=93120
Summary
[WK2] REGRESSION(124596) lot of web process unresponsiveness appears on Apple...
Balazs Kelemen
Reported
2012-08-03 07:27:49 PDT
Seems like decreasing the timeout of resetting the state of the web process to only 3 seconds was not a really good idea in
https://bugs.webkit.org/show_bug.cgi?id=88404
. The number of early exits has been increased because of this (although it was regular anyway). I propose to set it back to 15 and let WebKitTestRunner a bigger default timeout so we can detect an unresponsive web process.
Attachments
Patch
(2.46 KB, patch)
2012-08-03 07:29 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2012-08-03 07:29:53 PDT
Created
attachment 156377
[details]
Patch
Balazs Kelemen
Comment 2
2012-08-06 05:45:29 PDT
Tested locally on Mac with a debug build, there are considerably less sick tests with the patch.
Csaba Osztrogonác
Comment 3
2012-08-06 06:27:36 PDT
Comment on
attachment 156377
[details]
Patch LGTM, rs=me.
Balazs Kelemen
Comment 4
2012-08-06 06:35:23 PDT
Comment on
attachment 156377
[details]
Patch Clearing flags on attachment: 156377 Committed
r124762
: <
http://trac.webkit.org/changeset/124762
>
Balazs Kelemen
Comment 5
2012-08-06 06:35:29 PDT
All reviewed patches have been landed. Closing bug.
Balazs Kelemen
Comment 6
2012-08-06 07:52:22 PDT
Before this the Apple WK2 release bot was exiting after too many crashes/timeouts after 6151 tests, after the patch, it exits after 6400. Not a victory, but a bit better :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug