[WK2] REGRESSION(124596) lot of web process unresponsiveness appears on Apple bots https://bugs.webkit.org/show_bug.cgi?id=93120

Reviewed by Csaba Osztrogonác.

Set the short timeout back to 15 seconds and add more time to WebKitTestRunner
so it will be able to detect an unresponsive web process.

* Scripts/webkitpy/layout_tests/port/base.py:
(Port.default_timeout_ms):
* WebKitTestRunner/TestController.cpp:
(WTR):

Canonical link: https://commits.webkit.org/111101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124762 268f45cc-cd09-0410-ab3c-d52691b4dbfc