Tools/Scripts/webkitpy/layout_tests/port/base.py
@@ -148,6 +148,10 @@ class Port(object):
         return False
 
     def default_timeout_ms(self):
+        if self.get_option('webkit_test_runner'):
+            # Add some more time to WebKitTestRunner because it needs to syncronise the state
+            # with the web process and we want to detect if there is a problem with that in the driver.
+            return 50 * 1000
         return 35 * 1000
 
     def wdiff_available(self):
